--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,15 @@
 /*Heading 1*/
 h1 {
     font-size:10vw;
-    font-size: 100px;
+    font-size: 80px;
     color: #e9c46a;
     text-align: center;
+    padding: 10px;
 }
 /*Heading 2*/
 h2 {
     font-size:10vw;
-    font-size: 60px;
+    font-size: 40px;
     color: #e9c46a;
     text-align: center;
     padding: 20px;
@@ -24,9 +25,13 @@ body{
 /*Paragraphs*/
 p {
     font-size:5vw;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
     color:#264653;
+}
+.about{
+    text-align: left;
+    padding: 10px;
 }
 /*Unordered List*/
 ul {
@@ -40,7 +45,7 @@ ul {
     color: #BEC5AD;
     text-align: center;
     padding-top: 0px;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
 }
 /*Fitness Icon*/
 .icon{
@@ -56,9 +61,9 @@ a:link {
     color: #eeeeee;
     text-align: center;
     font-size:20vw;
-    font-size: 30px;
-    padding: 15px;
-    width: 300px;
+    font-size: 25px;
+    padding: 20px;
+    width: 240px;
     margin: 1px;
     text-decoration: none;
   }
