--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ h1 {
     text-align: center;
     padding: 10px;
 }
+.workout-heading{
+    font-size: 60px;
+}
 /*Heading 2*/
 h2 {
     font-size:10vw;
