--- a/styles.css
+++ b/styles.css
@@ -4,43 +4,62 @@
 }
 /*Header - Fitness Icon*/
 .header-icon{
-    float: inline-start;
-    height: 60px;
-    max-width: 80%;
-    opacity: 0.4;
-    padding: 10px;
+    max-width: 100%;
+    max-height: 100%;
+    text-align: center;
+    width: 60%;
+    margin: auto;
+    display: block;
+}
+/*image icon*/
+.img-icon{
+    height: 30px;
+    width: 30px;
+    margin-top: 40px;
+    margin-bottom: -20px;
 }
 /*Heading 1*/
 h1 {
-    font-size:10vw;
+    font-size: 10vw;
     font-size: 80px;
     color: #e9c46a;
     text-align: center;
 }
+.workout-heading{
+    font-size: 40px;
+    text-shadow: 1px 1px 3px #1A6158;
+}
 /*H-Home*/
 .header-home{
-    margin-top: -20px;
     margin-bottom: 40px;
     font-size: 100px;
     text-shadow: 1px 1px 3px #1A6158;
 }
+.header-menu:hover{
+    opacity: 0.5;
+}
 /*Navigation Menu*/
 .header-menu{
-    color: #BEC5AD;
-    height: 10px;
-    max-width: 100%;
-    border-radius: 10px;
-    border: 0px solid #1f1209;
-    box-shadow: 0px 0px 20px 0px #333;
+    background-color: #264653;
+    text-align: center;
+    margin: auto;
+    max-width: 80px;
+    max-height: 80px;
+    border: 1px solid #BEC5AD;;
     padding: 20px;
-    text-align: center;  
+    border-radius: 5px;
+    border: 0px solid #f47b25;
+    box-shadow: 0px 0px 5px 0px #1A6158;
+    margin-top: 60px;
+    margin-bottom: 80px;
 }
 /*menu button*/
 .menu-button{
-
-    margin-top: -100px;
-    margin-bottom: -100px;
-    font-size: 10px;
+    margin: auto;
+    font-size: 20px;
+    text-decoration: none;
+    color: #e9c46a;
+    text-shadow: 1px 1px 3px #1A6158;
 }
 .about{
     text-align: left;
@@ -80,15 +99,16 @@ p {
     display: inline-block;
     background-color: #264653;
     border-radius: 10px;
-    border: 5px double #f4a261;
     color: #eeeeee;
     text-align: center;
     font-size:20vw;
     font-size: 25px;
-    padding: 20px;
+    padding: 25px;
     width: 240px;
-    margin: 1px;
+    margin: 5px;
     text-decoration: none;
+    border: 0px solid #f47b25;
+    box-shadow: 0px 0px 10px 0px #1A6158;
   }
 /* visited link */
 .button-link:visited {
@@ -99,7 +119,8 @@ p {
 .button-link:hover{
     color: #264653;
     background-color: #f4a261;
-    border: 5px double #000000;
+    border: 1px double #000000;
+    opacity: 0.4;
   }
   /* footer divider */
 hr.dashed{
@@ -112,12 +133,12 @@ hr.dashed{
 }
   /* Social */
 .footer-creator{
-    padding: 20px;
+    margin-top: 100px;
+    text-align: center;
 }
 .footer-github-link{
-    padding: 20px;
+    text-decoration: none;
     color: #e9c46a;
-    text-align: center;
     text-shadow: 1px 1px 3px #1A6158;
     border-radius: 25px;
     border: #000000;
