--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,22 @@
 }
 /*Header - Fitness Icon*/
 .header-icon{
-    max-width: 100%;
-    max-height: 100%;
     text-align: center;
-    width: 60%;
-    margin: auto;
     display: block;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    width: 40px;
+    border-radius: 5px;
+    border: 0px solid #f47b25;
+    box-shadow: 0px 0px 3px 0px #1A6158;
 }
 /*image icon*/
 .img-icon{
     height: 30px;
     width: 30px;
-    margin-top: 40px;
-    margin-bottom: -20px;
 }
 /*Heading 1*/
 h1 {
