--- a/styles.css
+++ b/styles.css
@@ -38,16 +38,12 @@ h1 {
     font-size: 100px;
     text-shadow: 1px 1px 3px #1A6158;
 }
-.header-menu:hover{
-    opacity: 0.5;
-}
 /*Navigation Menu*/
 .header-menu{
-    background-color: #264653;
     text-align: center;
     margin: auto;
-    max-width: 80px;
-    max-height: 80px;
+    max-width: 600px;
+    max-height: 1000px;
     border: 1px solid #BEC5AD;;
     padding: 20px;
     border-radius: 5px;
@@ -58,11 +54,29 @@ h1 {
 }
 /*menu button*/
 .menu-button{
-    margin: auto;
+    display: inline-block;
+    background-color: #264653;
+    border-radius: 10px;
+    color: #eeeeee;
+    text-align: center;
+    font-size:20vw;
     font-size: 20px;
+    padding: 25px;
+    width: 240px;
+    margin: 5px;
     text-decoration: none;
-    color: #e9c46a;
-    text-shadow: 1px 1px 3px #1A6158;
+    border: 0px solid #f47b25;
+    box-shadow: 0px 0px 10px 0px #1A6158;
+}
+.menu-button:hover{
+    color: #264653;
+    background-color: #f4a261;
+    border: 1px double #000000;
+    opacity: 0.8;
+  }
+.menu-button:visited{
+    color: #2a9d8f;
+    opacity: 0.7;
 }
 .about{
     text-align: left;
@@ -123,7 +137,7 @@ p {
     color: #264653;
     background-color: #f4a261;
     border: 1px double #000000;
-    opacity: 0.4;
+    opacity: 0.8;
   }
   /* footer divider */
 hr.dashed{
